# Umbra-Coderbyte-Assessment-Solutions

./: .gitignore  CMakeLists.txt  README.md  behavioral.md  multiple_choice.md
.github/workflows/: main.yml
q1_easy/: CMakeLists.txt  binary_reversal.cpp  binary_reversal.md
q2_medium/: CMakeLists.txt  formatted_number.cpp  formatted_number.md
tests/: CMakeLists.txt  test_q1_easy.cpp  test_q2_medium.cpp
